--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,20 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".GPADisplayActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/NoActionBar">
         </activity>
         <activity
             android:name=".GPACalculationActivity"
-            android:label="@string/title_activity_gpa" >
+            android:label="@string/title_activity_gpa"
+            android:theme="@style/NoActionBar">
         </activity>
         <activity
             android:name=".SubjectDisplayActivity"
-            android:label="@string/title_activity_subject" >
+            android:label="@string/title_activity_subject"
+            android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
