--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,21 +6,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         <activity
             android:name=".GPADisplayActivity"
-            android:label="@string/app_name"
-            android:theme="@style/NoActionBar">
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name=".GPACalculationActivity"
-            android:label="@string/title_activity_gpa"
-            android:theme="@style/NoActionBar">
+            android:label="@string/title_activity_gpa">
+
         </activity>
         <activity
             android:name=".SubjectDisplayActivity"
-            android:label="@string/title_activity_subject"
-            android:theme="@style/NoActionBar">
+            android:label="@string/title_activity_subject">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
